# cbglib_dataset_editor

./: .gitignore  README.md  log.txt  main.py  pyproject.toml  requirements.txt
activities/: DataLabeler.py  DatasetLoader.py  ModelTrainer.py  ModelTraining.py  SyntheticDataCreator.py  __init__.py
data_classes/: SharedValues.py  __init__.py
image_manipulation/: DefaultFilterPresets.py  ExportWorker.py  FilterPreset.py  ImageSample.py  LabelBox.py  LabelEntry.py  SyntheticImage.py  __init__.py
model_training/: AbstractModelTrainer.py  YoloUltralyticsTrainer.py  __init__.py
src/: main.py
src/app/activities/: AbstractTabWidget.py  DataLabeler.py  DatasetLoader.py  DatasetManager.py  ModelTrainer.py  SyntheticDataCreator.py  SyntheticFiltersEditor.py  __init__.py
src/app/analysis/: Detection.py  ImageAnalyzer.py  LetterboxInfo.py  ONNXModel.py  Yolo26OnnxDetector.py  YoloOnnxDetector.py  __init__.py
src/app/data_classes/: FileData.py  SharedValues.py  __init__.py
src/app/dataset/: ExportWorker.py  FileData.py  ImageDataset.py  ImportWorker.py  __init__.py
src/app/image_manipulation/: DefaultFilterPresets.py  ExportWorker.py  FilterPreset.py  ImageDataset.py  ImageSample.py  LabelBox.py  LabelEntry.py  SyntheticImage.py  __init__.py
src/app/labeling/: Box.py  ImageLabelBox.py  (+6 more)
utils/: __init__.py  convertors.py  pointInRectangle.py
widgets/: ColorPicker.py  Container.py  DataLabeler.py  DatasetLoader.py  FilterPresetTreeView.py  ImageLabelBox.py  ImageSampleTreeView.py  ImageScene.py  LabelSelectorTreeView.py  ZoomGraphicsView.py  __init__.py
(+60 files in other folders)
